routing + display products + styling

--- a/src/app/search-bar/search-bar.component.html
+++ b/src/app/search-bar/search-bar.component.html
@@ -1,1 +1,6 @@
-<p>search-bar works!</p>
+
+<div id="search-bar">
+  <input type="text" placeholder="Filter by Name, Price...">
+</div>
+   <!-- [formControl]="products" -->
+
