--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -15,8 +15,33 @@ body {
   height: 100%;
 }
 
-#component-form {
-  width:100%;
-  display:flex;
-  justify-content: center;
+
+nav {
+  background-color: #E64A19;
+  height: 40px;
+  display: flex;
+  box-shadow: 0 3px 10px rgba(0, 0, 0, 0.44);
+  align-items: center;
+  padding-left: 35px;
+  color:white;
+  font-family: Arial;
+
+
+  ul {
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    li {
+      margin:5px;
+      padding-left:10px;
+      &.active
+      {
+        font-weight:bold;
+      }
+      a {
+        text-decoration: none;
+        color:white;
+      }
+    }
+  }
 }
