--- a/src/app/form/form.component.scss
+++ b/src/app/form/form.component.scss
@@ -1,6 +1,12 @@
 $base-color: #c6538c;
 $border-dark: rgba($base-color, 0.88);
 
+:host {
+  width:100%;
+  display:flex;
+  justify-content: center;
+}
+
 #section-main {
   width: 100%;
   display: flex;
