--- a/src/app/product-list/product-list.component.html
+++ b/src/app/product-list/product-list.component.html
@@ -1,1 +1,15 @@
-<p>product-list works!</p>
+<app-search-bar ></app-search-bar>
+
+<div id="product-list">
+  <div (mouseover)="hover=true" (mouseleave)="hover=false" *ngFor="let item of products | async" class="product" [style.background]="item.backgroundLight">
+    <div class="product-header">
+      <img class="product-img" src="../../assets/img/{{item.src}}"/>
+    </div>
+    <div class="product-separator"></div>
+    <div class="product-info">
+      <p class="product-main-info">{{item.name}} - {{item.price}}€</p>
+      <p class="product-sec-info">{{item.description}}</p>
+    </div>
+  </div>
+</div>
+
