--- a/src/app/product-list/product-list.component.html
+++ b/src/app/product-list/product-list.component.html
@@ -1,14 +1,20 @@
-<app-search-bar ></app-search-bar>
+<app-search-bar [products]="products |async" ></app-search-bar>
 
-<div id="product-list">
-  <div (mouseover)="hover=true" (mouseleave)="hover=false" *ngFor="let item of products | async" class="product" [style.background]="item.backgroundLight">
-    <div class="product-header">
-      <img class="product-img" src="../../assets/img/{{item.src}}"/>
-    </div>
-    <div class="product-separator"></div>
-    <div class="product-info">
-      <p class="product-main-info">{{item.name}} - {{item.price}}€</p>
-      <p class="product-sec-info">{{item.description}}</p>
+<div >
+  <div *ngIf="!loaded" >Loading products!</div>
+  <div *ngIf="loaded" id="product-list" >
+    <div (mouseover)="hover=true" (mouseleave)="hover=false" *ngFor="let item of products | async" class="product" >
+      <div class="product-header">
+        <p class="product-header-title" [style.background]="item.backgroundLight">{{item.name}} - {{item.price}}€</p>
+        <div class="product-header-img">
+          <img class="product-img" src="../../assets/img/{{item.src}}"/>
+
+        </div>
+      </div>
+      <div class="product-separator"></div>
+      <div class="product-info">
+        <p class="product-sec-info">{{item.description}}</p>
+      </div>
     </div>
   </div>
 </div>
