--- a/src/app/product-list/product-list.component.scss
+++ b/src/app/product-list/product-list.component.scss
@@ -10,40 +10,57 @@
 
 .product {
   border-radius:5px;
-  max-width: 250px;
+  max-width: 300px;
+  min-width:200px;
   max-height: 350px;
   display:flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   margin:10px;
-  padding:5px;
+  // padding:5px;
   transition: all 0.5s cubic-bezier(0.25, 0.8, 0.25, 1);
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
 
   &:hover {
     box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
   }
-
-  .product-img {
-    width: 150px;
-    height:inherit;
+  .product-header{
+    width:100%;
   }
+  .product-header-img {
+    display: flex;
+    justify-content: center;
+    .product-img {
+      width: 150px;
+      height:inherit;
+    }
+  }
+
   .product-info {
     width: 100%;
     height: 100%;
   }
-  .product-main-info {
+  .product-header-title {
     text-align: center;
     font-style:bold;
+    border-radius: 5px 5px 0px 0px;
+    margin-bottom: 5px;
+    height: 40px;
+    max-height:50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    box-shadow: 0px 3px 15px 0px rgba(173, 169, 163, 0.56);
   }
   .product-separator {
-    width: 50%;
-    border: 1px solid;
-    margin: 5px;
+    width: 90%;
+    border-bottom: 1.5px solid gray;
+    margin: 10px;
   }
 
   .product-sec-info {
-    margin-top: 10px;
+    // margin-top: 10px;
+    padding: 0 10px 10px;
   }
 }
