--- a/src/app/search-bar/search-bar.component.html
+++ b/src/app/search-bar/search-bar.component.html
@@ -1,6 +1,18 @@
+<form>
+  <div id="search-bar">
+    <input
+      type="text"
+      placeholder="Filter by Name, Price..."
+      [formControl]="searchInput"
+      (input)="onFilterProducts()"
+      >
+    <!--  -->
+  </div>
+  <button
+    class="btn-filter-price" >Filter by price
+  </button>
+</form>
 
-<div id="search-bar">
-  <input type="text" placeholder="Filter by Name, Price...">
-</div>
+<!-- (click)="onFilterProducts()" -->
    <!-- [formControl]="products" -->
 
