--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -17,7 +17,7 @@ body {
 
 
 nav {
-  background-color: #E64A19;
+  background-color: #23758E;
   height: 40px;
   display: flex;
   box-shadow: 0 3px 10px rgba(0, 0, 0, 0.44);
