--- a/src/app/product-list/product-list.component.scss
+++ b/src/app/product-list/product-list.component.scss
@@ -6,11 +6,19 @@
 
 #product-list {
   display:flex;
+  transition: all 1s ease-in;
+  height: 100%;
+  opacity: 0;
+  flex-wrap: wrap;
 }
+.product-list-display {
+  opacity: 1!important;
 
+}
 .product {
+  font-family:Arial, Helvetica, sans-serif;
   border-radius:5px;
-  max-width: 300px;
+  width: 300px;
   min-width:200px;
   max-height: 350px;
   display:flex;
@@ -21,12 +29,15 @@
   // padding:5px;
   transition: all 0.5s cubic-bezier(0.25, 0.8, 0.25, 1);
   box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
-
   &:hover {
     box-shadow: 0 14px 28px rgba(0, 0, 0, 0.25), 0 10px 10px rgba(0, 0, 0, 0.22);
   }
   .product-header{
     width:100%;
+    .product-price {
+      font-weight: bolder;
+      margin: 10px;
+    }
   }
   .product-header-img {
     display: flex;
