--- a/src/app/search-bar/search-bar.component.html
+++ b/src/app/search-bar/search-bar.component.html
@@ -1,8 +1,8 @@
-<form>
+<form class="form-search-bar">
   <div id="search-bar">
     <input
       type="text"
-      placeholder="Filter by Name, Price..."
+      placeholder="Search by Name, Price..."
       [formControl]="searchInput"
       (input)="onFilterProducts()"
       >
