--- a/src/app/product-list/product-list.component.html
+++ b/src/app/product-list/product-list.component.html
@@ -1,7 +1,7 @@
 <app-search-bar [products]="products |async" ></app-search-bar>
 
 <div >
-  <div *ngIf="!loaded" >Loading products!</div>
+  <div *ngIf="!loaded" class="product-loading" ><span><i class="fa fa-spin fa-spinner"></i></span></div>
   <div *ngIf="loaded" id="product-list" [ngClass]="{'product-list-display': loaded }">
     <div (mouseover)="hover=true" (mouseleave)="hover=false" *ngFor="let item of products | async" class="product"  >
       <div class="product-header">
