--- a/src/app/search-bar/search-bar.component.scss
+++ b/src/app/search-bar/search-bar.component.scss
@@ -27,16 +27,35 @@
   }
 }
 
-.btn-filter-price {
+.btn-filter {
   cursor: pointer;
   border: none;
+  position:relative;
   background: #18f7f7;
   border-radius: 5px;
   margin: 5px;
   height: 35px;
   transition: all ease-out 1s;
+  width: 12em;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 
   &:hover {
     background: #4dd3ee;
+  }
+
+  .btn-price {
+
+  }
+  .btn-name {
+
+  }
+
+  span {
+    position: absolute;
+    right: 15px;
+    font-size: 15px;
+    color: #8781a2cf;
   }
 }
